--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,13 @@ static_collected
 
 # Exclude machine-specific vs code settings
 .vscode/settings.json
+
+
+# For deploying to production
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+venv/
